Fixed bug that caused wrong vector dimension of trivial solution of homogeneous equation system.
Displaying trivial solution on screen is now re-enabled.
Additionally fixed css issue that caused solution of homogeneous equation system to be cropped with scrollbars in some cases.

--- a/source/assets/css/main.css
+++ b/source/assets/css/main.css
@@ -114,6 +114,11 @@ ul li{
     overflow-y: hidden;
 }
 
+#homogeneous-equation-system-result-div .katex-display{
+    overflow-x: visible;
+    overflow-y: visible;
+}
+
 .input-example{
     font-family: monospace;
     background-color: #e6e6e6;
